hphp/hack/test/typecheck/nonexistent_return_type.php
<?hh

function foo(): no_such_type {
  throw new Exception('');
}
